--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
-    "strictNullChecks": true,
+    "strict": true,
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
